[gd_scene format=3 uid="uid://csy0p26houdgk"]

[ext_resource type="PackedScene" uid="uid://b0c8e1u3lfpje" path="res://Scenes/EnemyBase/EnemyBase.tscn" id="1_jkg1l"]
[ext_resource type="Texture2D" uid="uid://cqurinancjvqt" path="res://assests/Enemy/frogy.png" id="2_tktty"]
[ext_resource type="Script" uid="uid://5asf8fq66luk" path="res://Scenes/EnemyBase/Frogy.gd" id="2_vtu14"]
[ext_resource type="Script" uid="uid://dnp03h01yt77c" path="res://Scenes/EnemyBase/AnimatedSprite2d.gd" id="4_tktty"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tktty"]
radius = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_jkg1l"]
atlas = ExtResource("2_tktty")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tktty"]
atlas = ExtResource("2_tktty")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtu14"]
atlas = ExtResource("2_tktty")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2636i"]
atlas = ExtResource("2_tktty")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vp55"]
atlas = ExtResource("2_tktty")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpo1o"]
atlas = ExtResource("2_tktty")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbokw"]
atlas = ExtResource("2_tktty")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_46uka"]
atlas = ExtResource("2_tktty")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua1cf"]
atlas = ExtResource("2_tktty")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4jkj"]
atlas = ExtResource("2_tktty")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_octv7"]
atlas = ExtResource("2_tktty")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqneu"]
atlas = ExtResource("2_tktty")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_221as"]
atlas = ExtResource("2_tktty")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjvbb"]
atlas = ExtResource("2_tktty")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_scok2"]
atlas = ExtResource("2_tktty")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubnmr"]
atlas = ExtResource("2_tktty")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_72ybp"]
atlas = ExtResource("2_tktty")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vii8"]
atlas = ExtResource("2_tktty")
region = Rect2(320, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2636i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkg1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tktty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtu14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2636i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vp55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpo1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkg1l")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbokw")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_46uka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua1cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4jkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_octv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqneu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_221as")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjvbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scok2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubnmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72ybp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46uka")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vii8")
}],
"loop": true,
"name": &"jump",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vtu14"]
size = Vector2(12, 10)

[node name="Frogy" unique_id=1881249055 instance=ExtResource("1_jkg1l")]
script = ExtResource("2_vtu14")
shoot_interval = 4.0
bullet_speed = 80.0

[node name="CollisionShape2D" parent="." index="0" unique_id=1538378777]
shape = SubResource("CircleShape2D_tktty")

[node name="AnimatedSprite2D" parent="." index="1" unique_id=2125008738]
texture_filter = 1
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_2636i")
animation = &"attack"
autoplay = "idle"
script = ExtResource("4_tktty")

[node name="CollisionShape2D" parent="HitBox" parent_id_path=PackedInt32Array(1088888907) index="0" unique_id=1572808315]
shape = SubResource("RectangleShape2D_vtu14")

[node name="JumpTimer" type="Timer" parent="." index="4" unique_id=1793246440]
wait_time = 3.0
one_shot = true

[node name="ShootTimer" type="Timer" parent="." index="5" unique_id=1679370441]

[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
